--- a/kakaomap.html
+++ b/kakaomap.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="map" style="width:750px;height:350px;"></div>
 
-	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은 APP KEY를 사용하세요"></script>
+	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9352b94d69e8b4c67b91d99976375eb5"></script>
 	<script>
 		var mapContainer = document.getElementById('map'); // 지도를 표시할 div 
 		var mapOption = {
